add post-a-booking and get booking functions and document them in openapiv2
